# tflm_digits

./: .clang-format  .gitignore  .gitmodules  AMA3B1KK.ld  CMakeLists.txt  README.md  application.mk  application_task.c  application_task.h  application_task_cli.c  application_task_cli.h  button.h  button_task.c  button_task.h  camera_task.c  camera_task.h  camera_task_cli.c  camera_task_cli.h  console_task.c  console_task.h  main.c  model_settings.cc  model_settings.h  quant_model.h  quant_model_large.cc  quant_model_large.h  quant_model_medium.h  startup_gcc.c  stub.c  svhn_model.cc  svhn_model.h  tflm.cc  tflm.h
bsp/: CMakeLists.txt  am_bsp.c  am_bsp.h
bsp/nm180100evb/: bsp_pins.src
bsp/nm180310/: bsp_pins.src
bsp/nm180410/: bsp_pins.src
cad/: camera_mount.prt  camera_mount.stl
config/: ble_config.h  lorawan_config.h  ota_config.h
drivers/arducam/: ArducamAmbiqHAL.c  ArducamAmbiqHAL.h  ArducamCamera.c  ArducamCamera.h  ArducamLink.c  ArducamLink.h  ArducamUart.c  ArducamUart.h  Platform.h  arducam.h  arducam_mega.c  arducam_mega.h
nmsdk2/: CMakeLists.txt  LICENSE  README.md
nmsdk2/comms/ble/ble-host/include/: hci_api.h
nmsdk2/comms/ble/ble-profiles/sources/services/: svc_core.c  svc_dis.c
nmsdk2/comms/lorawan/src/mac/: LoRaMac.c
nmsdk2/comms/lorawan/src/peripherals/: mpl3115.c  sx9500.h
nmsdk2/comms/lorawan/src/radio/sx126x/: radio.c
nmsdk2/comms/lorawan/src/system/: i2c.h  systime.c
nmsdk2/hal/ambiq/mcu/apollo3/hal/: am_hal_stimer.c
nmsdk2/hal/ambiq/utils/: am_util_ble.c  am_util_ble.h
nmsdk2/rtos/FreeRTOS/cli/: FreeRTOS_CLI.h
nmsdk2/targets/nm180100/: Makefile  build.cmake
nmsdk2/targets/nm180100/comms/ble/: CMakeLists.txt
nmsdk2/targets/nm180100/comms/ble/ble-host/sources/hci/nm180100/: hci_cmd.c  hci_cmd_cte.c  hci_cmd_past.c  hci_cmd_phy.c  hci_core.c  hci_core_ps.c  hci_evt.c  hci_tr.c  hci_vs_ae.c
nmsdk2/targets/nm180100/comms/ble/ble-host/sources/hci/nm180100/apollo3/: hci_drv_apollo3.c  hci_vs_apollo3.c
nmsdk2/targets/nm180100/comms/ble/wsf/include/: ble_config.h  hci_defs.h
nmsdk2/targets/nm180100/comms/ble/wsf/sources/port/nm180100/: wsf_assert.c  wsf_cs.c  wsf_heap.c  wsf_nvm.c  wsf_os.c  wsf_timer.c
nmsdk2/targets/nm180100/comms/lorawan/: CMakeLists.txt  lorawan_config.h
nmsdk2/targets/nm180100/comms/lorawan/src/apps/LoRaMac/common/: CayenneLpp.h  LmHandlerMsgDisplay.c  LmHandlerMsgDisplay.h
nmsdk2/targets/nm180100/comms/lorawan/src/apps/LoRaMac/common/LmHandler/: LmHandler.c  LmHandler.h
nmsdk2/targets/nm180100/comms/lorawan/src/boards/nm180100/: board.c  eeprom-board.c  lorawan_eeprom_config.h  lorawan_power.c  lorawan_power.h  rtc-board.c  sx1262-board.c
nmsdk2/targets/nm180100/hal/: CMakeLists.txt
nmsdk2/targets/nm180100/makedefs/: build_ble.mk  build_hal.mk  build_lorawan.mk  build_rtos.mk  common.mk  defs_ble.mk  defs_hal.mk  defs_lorawan.mk  defs_rtos.mk  includes_ble.mk  includes_hal.mk  includes_lorawan.mk  includes_rtos.mk  sources_ble.mk  sources_hal.mk  sources_lorawan.mk  sources_rtos.mk
nmsdk2/targets/nm180100/rtos/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  heap_newlib.c
nmsdk2/targets/nm180100/rtos/FreeRTOS/portable/: portmacro.h
nmsdk2/targets/nm180100/utils/: eeprom_emulation.c  eeprom_emulation.h
tensorflow/: model_settings.cc  model_settings.h  output_handler.cc  quant_model.h  quant_model_medium.cc  quant_model_opt.cc  quant_model_opt.h  quant_model_small.cc  quant_model_small.h  tflm.cc  tflm.h
test_images/: Number_0_Light.h  Number_1_Light.h  Number_2_Light.h  Number_3_Light.h  Number_4_Light.h  Number_5_Light.h  Number_6_Light.h  Number_7_Light.h  Number_8_Light.h  Number_9_Light.h
testing/: capture96x96.RAW  resize_capture.py  view.py
tools/: keys_info.py
tools/bsp_generator/: nm_pinconfig.py
training_files/: README.md  Sample Notebook.ipynb  model_details.ipynb
training_files/local/: ocr_model.py  preprocess.py  quantise.py  requirements.txt  svhn_testing_model_main.py  train.py  utils.py  validate.py  view.py
